tests/rosetta/out/Fortran/arithmetic-derivative.f90
! Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
program arithmetic_derivative
  implicit none
    integer, allocatable, dimension(:) :: factors
    integer :: x
      integer, allocatable, dimension(:) :: app0
    integer :: p
        integer, allocatable, dimension(:) :: app1
      integer, allocatable, dimension(:) :: app2
    character(len=100) :: s
    integer :: i
      integer :: g
      integer, allocatable, dimension(:) :: app3
      integer, allocatable, dimension(:) :: app4
      integer, allocatable, dimension(:) :: app5
      integer, allocatable, dimension(:) :: app6
    integer :: c
    integer :: d
    character(len=100) :: s7
    integer, allocatable, dimension(:) :: vals
      integer, allocatable, dimension(:) :: app8
      character(len=100) :: line
      integer :: j
    integer :: pow
    integer :: m
      integer :: exp
      character(len=100) :: s9
      integer :: res
      character(len=100) :: s10
  call main()
  contains
  recursive integer function primeFactors(n) result(res)
    integer, intent(in) :: n
    allocate(factors(0))
    x = n
    do while ((mod(x,2) == 0))
      if (allocated(app0)) deallocate(app0)
      allocate(app0(size(factors)+1))
      app0(1:size(factors)) = factors
      app0(size(factors)+1) = 2
      factors = app0
      x = int(((x / 2)))
    end do
    p = 3
    do while (((p * p) <= x))
      do while ((mod(x,p) == 0))
        if (allocated(app1)) deallocate(app1)
        allocate(app1(size(factors)+1))
        app1(1:size(factors)) = factors
        app1(size(factors)+1) = p
        factors = app1
        x = int(((x / p)))
      end do
      p = (p + 2)
    end do
    if ((x > 1)) then
      if (allocated(app2)) deallocate(app2)
      allocate(app2(size(factors)+1))
      app2(1:size(factors)) = factors
      app2(size(factors)+1) = x
      factors = app2
    end if
    res = factors
    return
  end function primeFactors
  recursive character(len=100) function repeat(ch,n) result(res)
    character(len=100), intent(in) :: ch
    integer, intent(in) :: n
    s = ''
    i = 0
    do while ((i < n))
      s = (s + ch)
      i = (i + 1)
    end do
    res = s
    return
  end function repeat
  recursive real function D(n) result(res)
    real, intent(in) :: n
    if ((n < 0)) then
      res = -D(-n)
      return
    end if
    if ((n < 2)) then
      res = 0
      return
    end if
    allocate(factors(0))
    if ((n < 1e+19)) then
      factors = primeFactors(int((n)))
    else
      g = int(((n / 100)))
      factors = primeFactors(g)
      if (allocated(app3)) deallocate(app3)
      allocate(app3(size(factors)+1))
      app3(1:size(factors)) = factors
      app3(size(factors)+1) = 2
      factors = app3
      if (allocated(app4)) deallocate(app4)
      allocate(app4(size(factors)+1))
      app4(1:size(factors)) = factors
      app4(size(factors)+1) = 2
      factors = app4
      if (allocated(app5)) deallocate(app5)
      allocate(app5(size(factors)+1))
      app5(1:size(factors)) = factors
      app5(size(factors)+1) = 5
      factors = app5
      if (allocated(app6)) deallocate(app6)
      allocate(app6(size(factors)+1))
      app6(1:size(factors)) = factors
      app6(size(factors)+1) = 5
      factors = app6
    end if
    c = size(factors)
    if ((c == 1)) then
      res = 1
      return
    end if
    if ((c == 2)) then
      res = real(((factors(((0)+1)) + factors(((1)+1)))))
      return
    end if
    d = (n / (real(factors(((0)+1)))))
    res = ((D(d) * (real(factors(((0)+1))))) + d)
    return
  end function D
  recursive character(len=100) function pad(n) result(res)
    integer, intent(in) :: n
    write(s7,'(G0)') n
    s = s7
    do while ((size(s) < 4))
      s = ' ' // s
    end do
    res = s
    return
  end function pad
  recursive subroutine main()
    allocate(vals(0))
    n = -99
    do while ((n < 101))
      if (allocated(app8)) deallocate(app8)
      allocate(app8(size(vals)+1))
      app8(1:size(vals)) = vals
      app8(size(vals)+1) = int((D(real(n))))
      vals = app8
      n = (n + 1)
    end do
    i = 0
    do while ((i < size(vals)))
      line = ''
      j = 0
      do while ((j < 10))
        line = (line + pad(vals((((i + j))+1))))
        if ((j < 9)) then
          line = line // ' '
        end if
        j = (j + 1)
      end do
      print *, line
      i = (i + 10)
    end do
    pow = 1
    m = 1
    do while ((m < 21))
      pow = (pow * 10)
      write(s9,'(G0)') m
      exp = s9
      if ((size(exp) < 2)) then
        exp = exp // ' '
      end if
      write(s10,'(G0)') m
      res = (s10 + repeat('0',(m - 1)))
      print *, trim(trim('D(10^' // exp) // ') / 7 = ') // res
      m = (m + 1)
    end do
  end subroutine main
end program arithmetic_derivative
